# lr-core-rs

./: .gitignore  Cargo.toml  README.md  architecture.txt  ideas.md  ideas.txt  makefile  rust-toolchain.toml
.github/workflows/: format.yml  lint.yml  test.yml
amf0/: Cargo.toml
amf0/src/: deserialization.rs  error.rs  errors.rs  lib.rs  serialization.rs
color/: Cargo.toml
color/src/: rgb_color.rs
crates/: Cargo.toml
crates/formatter/: Cargo.toml
crates/physics/: Cargo.toml
fixtures/format/: empty_layers.track.json  extended_lines.track.json  web_features.track.json
format_converter/: Cargo.toml  README.md
format_converter/src/: main.rs
format_core/: Cargo.toml
format_core/src/: lib.rs  track.rs  util.rs
format_json/: Cargo.toml  json.md
format_json/src/: error.rs  reader.rs  writer.rs
format_json/tests/: fixtures.rs  metadata_features.json  round_trip_fuzz_tests.rs  write.rs
format_sol/: Cargo.toml  temp.py
format_sol/src/: error.rs  reader.rs  writer.rs
format_trk/: Cargo.toml  trk.md
geometry/: Cargo.toml
lr-physics/: Cargo.toml  api_definitions.md
lr_format_core/: Cargo.toml
lr_format_json/: Cargo.toml  README.md
lr_format_sol/: Cargo.toml
lr_format_trk/: Cargo.toml
lr_physics_engine/: Cargo.toml  README.md  skeleton_spec.md  unsupported.txt
lr_physics_grid/: Cargo.toml
lr_physics_line_store/: Cargo.toml
lr_studio/: Cargo.toml
notes/: architecture.md
physics/: Cargo.toml  README.md  architecture_notes.md
quick_byte/: Cargo.toml  README.md
spatial_grid/: Cargo.toml
vector2d/: Cargo.toml
(+161 files in other folders)
