[package]
edition = "2024"
name = "format_converter"
version = "2.0.0"

[dependencies]
anyhow = "1"
clap = {version = "4", features = ["derive"]}
format_json = {path = "../format_json"}
format_sol = {path = "../format_sol"}
format_trk = {path = "../format_trk"}

[[bin]]
name = "format_converter"
path = "src/main.rs"
