[package]
name = "physics"
version = "0.1.0"
edition = "2024"

[dependencies]
geometry = { path = "../geometry" }
vector2d = { path = "../vector2d" }

[dev-dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
# Temporary until lr-formatter-rs gets published with a proper cargo path
formatter = { version = "0.1.0", path = "../formatter" }
